--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,5 @@ sudo: required
 services:
   - docker
 
-before_install:
-  - docker build -t rstudio/r .
-
 script:
-  - make all
+  - make test-all
