--- a/Dockerfile.focal
+++ b/Dockerfile.focal
@@ -1,4 +1,4 @@
-FROM ubuntu:bionic
+FROM ubuntu:focal
 MAINTAINER RStudio Docker <docker@rstudio.com>
 
 # update apt & install packages
@@ -20,7 +20,7 @@ RUN apt-get update -qq && \
 
 # add R apt repository
 RUN apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0x51716619e084dab9 && \
-    echo "deb http://cran.rstudio.com/bin/linux/ubuntu bionic-cran35/" >> /etc/apt/sources.list.d/cran-rstudio.list
+    echo "deb http://cran.rstudio.com/bin/linux/ubuntu focal-cran40/" >> /etc/apt/sources.list.d/cran-rstudio.list
 
 # Ensure FreeTDS is added to unixodbc upon installation
 RUN echo tdsodbc freetds/addtoodbc boolean true | debconf-set-selections
@@ -28,7 +28,9 @@ RUN echo tdsodbc freetds/addtoodbc boolean true | debconf-set-selections
 # Install libraries & database related packages separately to break up the layers
 RUN apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
+    gdebi-core \
     jags \
+    libaio1 \
     libatlas3-base \
     libcairo2 \
     libcairo2-dev \
@@ -38,11 +40,13 @@ RUN apt-get update -qq && \
     libgsl0-dev \
     libmysqlclient-dev \
     libnetcdf-dev \
+    libpcre2-dev \
     libprocps-dev \
     libproj-dev \
     libprotoc-dev \
     libquantlib0-dev \
     libsasl2-dev \
+    libssh-dev \
     libsqliteodbc \
     libxml2-dev \
     libxt-dev \
@@ -54,34 +58,34 @@ RUN apt-get update -qq && \
     wget && \
     rm -rf /var/lib/apt/lists/*
 
-# Note: myodbc is not available for bionic: https://launchpad.net/myodbc
+# Note: myodbc is not available for focal: https://launchpad.net/myodbc
 RUN cd /tmp && \
-    wget -q https://dev.mysql.com/get/Downloads/Connector-ODBC/8.0/mysql-connector-odbc-8.0.11-linux-ubuntu18.04-x86-64bit.tar.gz && \
-    tar zxf mysql-connector-odbc-8.0.11-linux-ubuntu18.04-x86-64bit.tar.gz && \
-    cp mysql-connector-odbc-8.0.11-linux-ubuntu18.04-x86-64bit/bin/* /usr/local/bin && \
-    cp mysql-connector-odbc-8.0.11-linux-ubuntu18.04-x86-64bit/lib/* /usr/local/lib && \
+    wget -q https://dev.mysql.com/get/Downloads/Connector-ODBC/8.0/mysql-connector-odbc-8.0.23-linux-glibc2.12-x86-64bit.tar.gz && \
+    tar zxf mysql-connector-odbc-8.0.23-linux-glibc2.12-x86-64bit.tar.gz && \
+    cp -r mysql-connector-odbc-8.0.23-linux-glibc2.12-x86-64bit/bin/* /usr/local/bin && \
+    cp -r mysql-connector-odbc-8.0.23-linux-glibc2.12-x86-64bit/lib/* /usr/local/lib && \
     myodbc-installer -a -d -n "MySQL" -t "Driver=/usr/local/lib/libmyodbc8w.so" && \
     myodbc-installer -a -d -n "MySQL ODBC 8.0 Driver" -t "Driver=/usr/local/lib/libmyodbc8w.so" && \
-    rm -rf mysql-connector-odbc-8.0.11-linux-ubuntu18.04-x86-64bit*
+    rm -rf mysql-connector-odbc-8.0.23-linux-glibc2.12-x86-64bit*
 
 # Install JDK and Cargo separately to avoid the recommended packages
 RUN apt-get update -qq && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openjdk-8-jdk cargo && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends openjdk-11-jdk cargo && \
     rm -rf /var/lib/apt/lists/*
 
 RUN apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
-    python-dev \
-    python-pip \
-    python-virtualenv
+    python3-dev \
+    python3-pip \
+    python3-venv \
+    python3-virtualenv && \
+    rm -rf /var/lib/apt/lists/*
 
 # Install Julia
-RUN wget -q https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0.2-linux-x86_64.tar.gz && \
-    tar -C /usr/local -zxf julia-1.0.2-linux-x86_64.tar.gz && \
-    ln -s /usr/local/julia-1.0.2/bin/julia /usr/local/bin/julia && \
-    rm julia-1.0.2-linux-x86_64.tar.gz
-
-# Install texlive separately, in three parts, because it is so large.
+RUN wget -q https://julialang-s3.julialang.org/bin/linux/x64/1.0/julia-1.0.5-linux-x86_64.tar.gz && \
+    tar -C /usr/local -zxf julia-1.0.5-linux-x86_64.tar.gz && \
+    ln -s /usr/local/julia-1.0.5/bin/julia /usr/local/bin/julia && \
+    rm julia-1.0.5-linux-x86_64.tar.gz
 
 # First install some non-texlive packages which are recommended but will be skipped when we install texlive
 # in order to not install the documentation.
@@ -103,26 +107,18 @@ RUN apt-get update -qq && \
     xzdec && \
     rm -rf /var/lib/apt/lists/*
 
-# First part of texlive itself. Use --no-install-recommends to avoid installing ~750MB of documentation
+# Install of texlive itself. Use --no-install-recommends to avoid installing ~750MB of documentation
 RUN apt-get update -qq && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     texlive \
     texlive-fonts-extra \
-    texlive-generic-recommended && \
-    rm -rf /var/lib/apt/lists/*
-
-# Second part of texlive itself. Use --no-install-recommends to avoid installing ~750MB of documentation
-RUN apt-get update -qq && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     biber \
     lmodern \
-    prosper \
     ps2eps \
     texinfo \
     texlive-bibtex-extra \
     texlive-extra-utils \
     texlive-font-utils \
-    texlive-generic-extra \
     texlive-lang-arabic \
     texlive-latex-extra \
     texlive-luatex \
@@ -130,17 +126,16 @@ RUN apt-get update -qq && \
     texlive-xetex && \
     rm -rf /var/lib/apt/lists/*
 
-RUN wget https://github.com/jgm/pandoc/releases/download/2.3.1/pandoc-2.3.1-1-amd64.deb && \
-    dpkg -i pandoc-2.3.1-1-amd64.deb && \
-    rm pandoc-2.3.1-1-amd64.deb
+# Set /usr/bin/python to be python3
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3 20
 
 # Set default locale
 RUN update-locale --reset LANG=C.UTF-8
 
-ARG R_VERSION=3.6.3
+ARG R_VERSION=4.0.4
 
 # Install R
-RUN wget -q https://cdn.rstudio.com/r/ubuntu-1804/R-${R_VERSION}-ubuntu-1804.tar.gz -O /tmp/R-${R_VERSION}.tar.gz && \
+RUN wget -q https://cdn.rstudio.com/r/ubuntu-2004/R-${R_VERSION}-ubuntu-2004.tar.gz -O /tmp/R-${R_VERSION}.tar.gz && \
     mkdir -p /opt/R && \
     tar zx -C /opt/R -f /tmp/R-${R_VERSION}.tar.gz && \
     ln -s /opt/R/${R_VERSION}/bin/R /usr/bin/R && \
