--- a/.github/workflows/test-pkgs.yaml
+++ b/.github/workflows/test-pkgs.yaml
@@ -4,6 +4,7 @@ on:
       - main
       - master
       - ghactions
+      - pak
   pull_request:
     branches:
       - main
@@ -20,6 +21,7 @@ jobs:
     outputs:
       pkg_names: ${{ steps.set_pkg_names.outputs.pkg_names }}
     steps:
+    - uses: actions/checkout@v2
     - id: set_pkg_names
       # https://stackoverflow.com/a/32354503/591574
       run: |
