--- a/.github/workflows/test-pkgs.yaml
+++ b/.github/workflows/test-pkgs.yaml
@@ -19,31 +19,37 @@ jobs:
   packages:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.set_matrix.outputs.matrix }}
+      pkg_names: ${{ steps.set_pkg_names.outputs.pkg_names }}
     steps:
     - uses: actions/checkout@v2
-    - id: set_matrix
+    - id: set_pkg_names
       # https://stackoverflow.com/a/32354503/591574
       run: |
         PKGS=`ls packages | jq -R '[.]' | jq -s -c 'add'`
-        echo "::set-output name=matrix::{\"pkg\":$PKGS, \"docker_type\":[\"bionic\", \"xenial\"]}"
+        echo "::set-output name=pkg_names::$PKGS"
     - name: debug
       run: |
-        echo "${{ steps.set_matrix.outputs.matrix }}"
+        echo "${{ steps.set_pkg_names.outputs.pkg_names }}"
 
   test:
     runs-on: ubuntu-latest
 
     name: ${{ matrix.docker_type }} - ${{ matrix.pkg }}
 
+    needs:
+    - packages
     strategy:
       fail-fast: false
 
       # Test using independent docker images
       # Isolated testing so that a prior package doesn't "help" another package
-      # dynamic pkg names from the `./packages` folder
-      # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
-      matrix: ${{fromJson(needs.packages.outputs.matrix)}}
+      matrix:
+        # dynamic pkg names from the `./packages` folder
+        # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
+        pkg: ${{ fromJson(needs.packages.outputs.pkg_names) }}
+        docker_type:
+        - bonic
+        - xenial
 
     steps:
       - uses: actions/checkout@v2
@@ -52,6 +58,6 @@ jobs:
         run: |
           make docker-build-${{ matrix.docker_type }}
 
-      - name: "Test package: ${{ matrix.pkg.name }}"
+      - name: "Test package: ${{ matrix.pkg }}"
         run: |
-          make test-${{ matrix.docker_type }}-${{ matrix.pkg.name }}
+          make test-${{ matrix.docker_type }}-${{ matrix.pkg }}
