--- a/Dockerfile.xenial
+++ b/Dockerfile.xenial
@@ -37,6 +37,7 @@ RUN apt-get update -qq && \
     libgsl0-dev \
     libmysqlclient-dev \
     libnetcdf-dev \
+    libpcre2-dev \
     libprocps4-dev \
     libproj-dev \
     libprotoc-dev \
