--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,9 @@ jobs:
     outputs:
       matrix: ${{ steps.list-tests.outputs.matrix }}
     steps:
+      - uses: actions/checkout@v3
       - name: List Tests
         id: list-tests
-        uses: actions/checkout@v3
         run: echo "::set-output name=matrix::$(ls -1 -d packages/* | grep -v gsl | tr '\n' '\0' | xargs -0 -n 1 basename | jq -Rsc '. / "\n" - [""]')"
   
   test-package:
