--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,12 +15,11 @@ concurrency:
   group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
   cancel-in-progress: true
 
-runs:
-  using: 'docker'
-  image: 'docker://rstudio/shinyapps-package-dependencies:focal'
-
 jobs:
   list-tests:
+    runs-on: ubuntu-latest
+    container:
+      image: rstudio/shinyapps-package-dependencies:focal
     steps:
       - name: List Tests
         id: list-tests
