--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,18 +10,16 @@ on:
       - main
     pull_request:
 
-# This allows a subsequently queued workflow run to interrupt previous runs
-concurrency:
-  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}'
-  cancel-in-progress: true
-
 jobs:
-  list-tests:
+  container-test-job:
     runs-on: ubuntu-latest
     container:
-      image: rstudio/shinyapps-package-dependencies:focal
+      image: node:14.16
+      env:
+        NODE_ENV: development
+      ports:
+        - 80
+      options: --cpus 1
     steps:
-      - name: List Tests
-        id: list-tests
-        run: echo '::set-output name=matrix::["rsvg"]'
-  
+      - name: Check for dockerenv file
+        run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
