--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ concurrency:
 
 jobs:
   list-tests:
+    runs-on: ubuntu-latest
     outputs:
       matrix: ${{ steps.list-tests.outputs.matrix }}
     steps:
