--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,9 @@ jobs:
     name: ${{ matrix.stack }}
     needs: list-tests
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        stack: ${{ fromJSON(needs.list-tests.outputs.matrix) }}
     #container:
     #  image: rstudio/shinyapps-package-dependencies:focal
     steps:
