--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "matrix=$(ls -1 -d packages/* | grep -v gsl | tr '\n' '\0' | xargs -0 -n 1 basename | jq -Rsc '. / "\n" - [""]')" >> $GITHUB_OUTPUT
 
   test-package:
-    name: ${{ matrix.stack }}
+    name: ${{ matrix.stack }} on ${{ matrix.os }}
     needs: list-tests
     runs-on: ubuntu-latest
     strategy:
