--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         stack: ${{ fromJSON(needs.list-tests.outputs.matrix) }}
-        os: [focal, jammy]
+        os: [jammy]
     container:
       image: rstudio/shinyapps-package-dependencies:${{ matrix.os }}
     steps:
