--- a/Dockerfile.jammy
+++ b/Dockerfile.jammy
@@ -62,6 +62,7 @@ RUN apt-get update -qq && \
     unixodbc-dev \
     wget \
     zip && \
+    rm -f /etc/ImageMagick-6/policy.xml && \
     rm -rf /var/lib/apt/lists/*
 
 # Install the RStudio Professional Drivers (includes mysql drivers)
