--- a/Dockerfile.jammy
+++ b/Dockerfile.jammy
@@ -91,10 +91,10 @@ RUN wget -q https://julialang-s3.julialang.org/bin/linux/x64/1.9/julia-1.9.1-lin
     rm julia-1.9.1-linux-x86_64.tar.gz
 
 # Install of texlive. Use --no-install-recommends to avoid installing ~750MB of documentation
-# RUN apt-get update -qq && \
-#     DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
-#     texlive-full && \
-#     rm -rf /var/lib/apt/lists/*
+RUN apt-get update -qq && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+    texlive-full && \
+    rm -rf /var/lib/apt/lists/*
 
 
 # add in the less secure openssl config file
